--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A sample 'hello world' file",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "exit 0",
+    "start": "node ./app"
   },
   "author": "Jared",
   "license": "ISC",
